# pygame-sprites

./: .gitignore  LICENSE  README.md  pyproject.toml  sprite.py  spritesheet.py
_internal/: _sprite_types.py
src/pygame_sprites/: __init__.py  definitions.py  spritesheet.py
src/pygame_sprites/_internal/: validators.py
