[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame_sprites"
version = "0.1.0"
description = "A powerful 2D spritesheet handler for Pygame"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Misbahur Rahman", email = "rahman.misbah2604@gmail.com"}
]
dependencies = [
    "pygame-ce>=2.5.2", # Recommend pygame-ce in 2026 for performance
    "beartype>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]
